--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Changes in Version 2.1.0
+  o Update doc
+  o Adapt to new CRAN standards
+  o paper added
+
 Changes in Version 2.0.4
   o update info
 
