--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Changes in Version 2.1.4
+  o Doc update
+  o Citation modified
+
 Changes in Version 2.1.2
   o Update doc
   o Adapt to new CRAN standards
